fix: enhance UI with improved font styling and uppercase headings for better visibility

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@ body {
   min-width: 400px;
   position: relative;
   background-color: #f6f7f8;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 body::before {
@@ -165,15 +168,50 @@ body::before {
 
 .jumbo_info {
   position: absolute;
+  text-transform: uppercase;
+  font-weight: 800;
   z-index: 10;
-  bottom: 10%;
+  bottom: 15%;
   left: 5%;
   color: var(--darker);
+  background-color: rgba(53, 53, 53, 0.123);
+  color: var(--sf-text);
+  padding: 0 01rem;
+  border-radius: 20px;
+  backdrop-filter: blur(5px);
+  box-shadow: 0px 1px 12px 0px black;
 }
 
-.jumbo_slide.active .jumbo_img {
-  transform: scale(1.02);
+
+.img_jumbo_container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 1s;
+
+  &:hover {
+    background-color: #0000003f;
+  }
+
+  .jumbo_img {
+    transition-duration: 0.5s;
+    max-width: 100%;
+    height: auto;
+
+    &:hover {
+      transform: scale(1.02);
+    }
+  }
+
+  .bg-hover {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+  }
 }
+
 
 /*.jumbo-title {
   text-shadow:
